--- a/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.javafx.addressbook.MainController">
+<VBox minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.javafx.addressbook.controllers.MainController">
    <children>
       <HBox maxHeight="50.0" prefHeight="50.0">
          <children>
