--- a/src/main/resources/ru/javabegin/javafx/addressbook/edit.fxml
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/edit.fxml
@@ -49,12 +49,12 @@
    <right>
       <VBox prefHeight="120.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnOK" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="ОК">
+            <Button fx:id="btnOK" defaultButton="true" mnemonicParsing="false" prefHeight="25.0" prefWidth="73.0" text="ОК">
                <VBox.margin>
                   <Insets bottom="5.0" left="30.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="btnCancel" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="78.0" text="Отмена">
+            <Button fx:id="btnCancel" cancelButton="true" contentDisplay="CENTER" mnemonicParsing="false" onAction="#actionClose" prefHeight="25.0" prefWidth="78.0" text="Отмена">
                <VBox.margin>
                   <Insets bottom="5.0" left="30.0" right="5.0" top="5.0" />
                </VBox.margin>
