--- a/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
@@ -14,17 +14,17 @@
    <children>
       <HBox maxHeight="50.0" prefHeight="50.0">
          <children>
-            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="Добавить">
+            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%add">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnEdit" maxWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" text="Изменить">
+            <Button fx:id="btnEdit" maxWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" text="%edit">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnDelete" mnemonicParsing="false" prefHeight="25.0" onAction="#actionButtonPressed" prefWidth="70.0" text="Удалить">
+            <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%delete">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
@@ -36,7 +36,7 @@
       </HBox>
       <AnchorPane maxHeight="30.0" prefHeight="30.0">
          <children>
-            <Button fx:id="btnSearch" layoutX="277.0" layoutY="6.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" text="Поиск" AnchorPane.rightAnchor="0.0" />
+            <Button fx:id="btnSearch" layoutX="277.0" layoutY="6.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" text="%search" AnchorPane.rightAnchor="0.0" />
             <TextField fx:id="txtSearch" layoutX="-31.0" layoutY="6.0" prefHeight="25.0" prefWidth="273.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" />
          </children>
          <VBox.margin>
@@ -47,8 +47,8 @@
          <children>
             <TableView fx:id="tableAddressBook" prefHeight="228.0" prefWidth="354.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
               <columns>
-                <TableColumn fx:id="tableColumnFio" prefWidth="183.33334350585938" text="ФИО" />
-                <TableColumn fx:id="tableColumnPhone" prefWidth="174.0" text="Телефон" />
+                <TableColumn fx:id="tableColumnFio" prefWidth="183.33334350585938" text="%fio" />
+                <TableColumn fx:id="tableColumnPhone" prefWidth="174.0" text="%phone_number" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
