--- a/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
@@ -5,26 +5,27 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import org.controlsfx.control.textfield.CustomTextField?>
+<?import org.controlsfx.control.textfield.TextFields?>
 
 <VBox minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.javafx.addressbook.controllers.MainController">
    <children>
       <HBox maxHeight="50.0" prefHeight="50.0">
          <children>
-            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%add">
+            <Button fx:id="btnAdd" minWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%add">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnEdit" maxWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" text="%edit">
+            <Button fx:id="btnEdit" maxWidth="70.0" minWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" text="%edit">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnDelete" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%delete">
+            <Button fx:id="btnDelete" minWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%delete">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
@@ -36,8 +37,8 @@
       </HBox>
       <AnchorPane maxHeight="30.0" prefHeight="30.0">
          <children>
-            <Button fx:id="btnSearch" layoutX="277.0" layoutY="6.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" text="%search" AnchorPane.rightAnchor="0.0" />
-            <TextField fx:id="txtSearch" layoutX="-31.0" layoutY="6.0" prefHeight="25.0" prefWidth="273.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" />
+            <Button fx:id="btnSearch" layoutX="277.0" layoutY="6.0" minWidth="70.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" text="%search" AnchorPane.rightAnchor="0.0" />
+            <TextFields fx:factory="createClearableTextField" fx:id="txtSearch" layoutY="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" />
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="20.0" right="20.0" />
