--- a/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import org.controlsfx.control.textfield.CustomTextField?>
 <?import org.controlsfx.control.textfield.TextFields?>
 
 <VBox minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.javafx.addressbook.controllers.MainController">
@@ -35,10 +34,10 @@
             <Insets bottom="5.0" left="20.0" right="20.0" top="5.0" />
          </VBox.margin>
       </HBox>
-      <AnchorPane maxHeight="30.0" prefHeight="30.0">
+      <AnchorPane fx:id="anchorPaneForSearch" maxHeight="30.0" prefHeight="30.0">
          <children>
-            <Button fx:id="btnSearch" layoutX="277.0" layoutY="6.0" minWidth="70.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="51.0" text="%search" AnchorPane.rightAnchor="0.0" />
-            <TextFields fx:factory="createClearableTextField" fx:id="txtSearch" layoutY="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" />
+            <Button fx:id="btnSearch" layoutX="277.0" layoutY="6.0" minWidth="70.0" mnemonicParsing="false" onAction="#actionSearch" prefHeight="25.0" prefWidth="51.0" text="%search" AnchorPane.rightAnchor="0.0" />
+            <TextFields fx:id="txtSearch" layoutY="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" fx:factory="createClearableTextField" />
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="20.0" right="20.0" />
