--- a/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -62,6 +63,7 @@
       <AnchorPane prefHeight="13.0" prefWidth="354.0">
          <children>
             <Label fx:id="labelCount" text="Количество записей: " AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
+            <ComboBox fx:id="comboLocales" layoutX="210.0" prefWidth="150.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" />
          </children>
          <VBox.margin>
             <Insets bottom="15.0" left="20.0" right="20.0" top="5.0" />
