--- a/src/main/resources/ru/javabegin/javafx/addressbook/edit.fxml
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/edit.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -7,7 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.javafx.addressbook.controllers.EditDialogController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="600.0" prefHeight="120.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.javafx.addressbook.controllers.EditDialogController">
    <left>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -49,12 +50,12 @@
    <right>
       <VBox prefHeight="120.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnCancel" cancelButton="true" contentDisplay="CENTER" mnemonicParsing="false" onAction="#actionClose" prefHeight="25.0" prefWidth="78.0" text="%cancel">
+            <Button fx:id="btnCancel" cancelButton="true" contentDisplay="CENTER" minWidth="120.0" mnemonicParsing="false" onAction="#actionClose" prefHeight="25.0" prefWidth="78.0" text="%cancel">
                <VBox.margin>
                   <Insets bottom="5.0" left="30.0" right="5.0" top="5.0" />
                </VBox.margin>
             </Button>
-            <Button fx:id="btnOK" defaultButton="true" mnemonicParsing="false" onAction="#actionSave" prefHeight="25.0" prefWidth="73.0" text="ОК">
+            <Button fx:id="btnOK" defaultButton="true" minWidth="120.0" mnemonicParsing="false" onAction="#actionSave" prefHeight="25.0" prefWidth="73.0" text="ОК">
                <VBox.margin>
                   <Insets bottom="5.0" left="30.0" right="5.0" top="5.0" />
                </VBox.margin>
@@ -65,4 +66,7 @@
          </BorderPane.margin>
       </VBox>
    </right>
+   <stylesheets>
+      <URL value="@../../../../styles/addressbook.css" />
+   </stylesheets>
 </BorderPane>
