--- a/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
+++ b/src/main/resources/ru/javabegin/javafx/addressbook/main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -11,21 +12,21 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.controlsfx.control.textfield.TextFields?>
 
-<VBox minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.javafx.addressbook.controllers.MainController">
+<VBox minHeight="700.0" minWidth="600.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.javabegin.javafx.addressbook.controllers.MainController">
    <children>
       <HBox maxHeight="50.0" prefHeight="50.0">
          <children>
-            <Button fx:id="btnAdd" minWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%add">
+            <Button fx:id="btnAdd" minWidth="140.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%add">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnEdit" maxWidth="70.0" minWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" text="%edit">
+            <Button fx:id="btnEdit" maxWidth="70.0" minWidth="140.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" text="%edit">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
             </Button>
-            <Button fx:id="btnDelete" minWidth="70.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%delete">
+            <Button fx:id="btnDelete" minWidth="140.0" mnemonicParsing="false" onAction="#actionButtonPressed" prefHeight="25.0" prefWidth="70.0" text="%delete">
                <HBox.margin>
                   <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
                </HBox.margin>
@@ -37,8 +38,8 @@
       </HBox>
       <AnchorPane fx:id="anchorPaneForSearch" maxHeight="30.0" prefHeight="30.0">
          <children>
-            <Button fx:id="btnSearch" layoutX="277.0" layoutY="6.0" minWidth="70.0" mnemonicParsing="false" onAction="#actionSearch" prefHeight="25.0" prefWidth="51.0" text="%search" AnchorPane.rightAnchor="0.0" />
-            <TextFields fx:id="txtSearch" layoutY="6.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="80.0" fx:factory="createClearableTextField" />
+            <Button fx:id="btnSearch" layoutX="277.0" layoutY="6.0" minWidth="120.0" mnemonicParsing="false" onAction="#actionSearch" prefHeight="25.0" prefWidth="51.0" text="%search" AnchorPane.rightAnchor="0.0" />
+            <TextFields fx:id="txtSearch" layoutY="15.0" prefHeight="34.0" prefWidth="432.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="128.0" styleClass="search-text-field" fx:factory="createClearableTextField" />
          </children>
          <VBox.margin>
             <Insets bottom="10.0" left="20.0" right="20.0" />
@@ -70,4 +71,7 @@
          </VBox.margin>
       </AnchorPane>
    </children>
+   <stylesheets>
+      <URL value="@../../../../styles/addressbook.css" />
+   </stylesheets>
 </VBox>
